--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,8 +1,9 @@
-@import 'flex.less';
-@import 'utils.less';
-@import 'colors.less';
-@import 'board.less';
-@import 'header.less';
+@import './fonts';
+@import './flex';
+@import './utils';
+@import './colors';
+@import './board';
+@import './header';
 
 html, body {
     height: 100%;
