--- a/app/less/board.less
+++ b/app/less/board.less
@@ -80,7 +80,8 @@
     border-radius: 50%;
     z-index: 1;
     left: calc(~"50% - 2.5rem");
-    margin-top: -2.5rem;
+    top: calc(~"50% - 2.5rem");
+    
     border-bottom: 5px solid grey;
     &.pressed {
         background-color: grey;        
