--- a/app/less/header.less
+++ b/app/less/header.less
@@ -85,6 +85,7 @@
                 right: 0;
                 bottom: 0;
                 opacity: 0;
+                transition: 0.5s ease opacity;
                 &.active {
                     opacity: 1;
                 }
